<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ArtimageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="ArtImage"
        app:srcCompat="@drawable/ic_launcher_background"
        android:onClick="selectImage"/>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:hint="Enter Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/artistText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:hint="Enter Artist"
        android:inputType="text" />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="Enter Year"
        android:inputType="text" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="Save"
        android:layout_margin="20dp"/>


</LinearLayout>